updateDealsStatus.py done

--- a/dealEngine.conf
+++ b/dealEngine.conf
@@ -3,9 +3,12 @@ readyToPublishThreshold=12
 numberOfJobsThreshold=36
 currentDatasetName=
 secondaryDatasetName=
-waitEndLoop=60
+waitEndLoop=5
 waitRampUp=1800
 isRampUp=1
+
+[boost]
+boostURL=http://10.200.1.21:8080/graphql/query
 
 [aria2c]
 serverConnections=8
