--- a/dealEngine.conf
+++ b/dealEngine.conf
@@ -3,12 +3,14 @@ readyToPublishThreshold=12
 numberOfJobsThreshold=36
 currentDatasetName=
 secondaryDatasetName=
+waitCommP=30
 waitEndLoop=5
 waitRampUp=1800
 isRampUp=1
 
-[boost]
+[lotus]
 boostURL=http://10.200.1.21:8080/graphql/query
+minerId=f0xx
 
 [aria2c]
 serverConnections=8
