Bug fix in IngestDeals.py

--- a/dealEngine.conf
+++ b/dealEngine.conf
@@ -10,7 +10,7 @@ isRampUp=1
 
 [lotus]
 boostURL=http://10.200.1.21:8080/graphql/query
-minerId=f0xx
+minerId=f0xxx
 
 [aria2c]
 serverConnections=8
